--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="UTF-8"></meta>
         <meta name="viewport" content="width=device-width, initial-scale=1">   
-        <link href="bootstrap.min.css" rel="stylesheet" id="bootstrap-css"></link>
+        <link href="/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"></link>
     </head>
     <body>
-        <footer class="footer">
-            <div class="container-footer-all">
-                <img src="foot.png" style="position: absolute; width: 100%; height: 15%; bottom: 0;"></img>
-            </div>
-        </footer>
+    	<div th:fragment="footer">
+	        <footer class="footer">
+	            <div class="container-footer-all">
+	                <img src="/img/foot.png" style="position: absolute; width: 100%; height: 15%; bottom: 0;"></img>
+	            </div>
+	        </footer>
+        </div>
     </body>
 </html>
