--- a/src/main/resources/templates/inicio-estudiante.html
+++ b/src/main/resources/templates/inicio-estudiante.html
@@ -1,32 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="UTF-8"></meta>
         <meta name="viewport" content="width=device-width, initial-scale=1">   
         <link href="http://fonts.cdnfonts.com/css/lexend-deca" rel="stylesheet">
-        <link href="bootstrap.min.css" rel="stylesheet" id="bootstrap-css"></link>
-        <link href="general.css" rel="stylesheet" id="bootstrap-css"></link>
+        <link href="/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"></link>
+        <link href="/css/general.css" rel="stylesheet" id="general-css"></link>
     </head>
     <body>
-        <nav class="navbar navbar-inverse" style="background-color: #ffffff; border-width: 0px;border-radius: 0px; width: 100%;">
-            <div class="container" style="height: 60px; padding:0%; ">
-                <div id="navbar" class="collapse navbar-collapse" style="padding:0%; ">
-                    <div class="navbar-header">
-                        <a><img src="bx_user-circle.png" width="50" height="50" style="margin-top: 5px;"></img></a>
-                    </div>
-                    <ul class="nav navbar-nav">
-                        <li><a
-                            style="color: #4E6D79; font-size: 20pt; font-weight: bold; margin-top: 5px"
-                            th:href="@{/inicio/}">Nombre Nombre2 Apellido Apellido2</a>
-                        </li>
-                    </ul>
-                    <div class="navbar-right">
-                        <a><img src="bx_exit.png" width="50" height="50" style="margin-top: 5px;"></img></a>
-                    </div>
-                </div> 
-            </div>
-            <div class="container" style="height: 5px; background-color: #4E6D79; margin:0%; padding:0%; width: 100%;"></div>
-        </nav>
+    	<div th:replace="fragments/navbar :: nav"></div>
         <div class="container cont1" style="margin-top: 4%;">
             <div class="row center">
                 <div class="form-group row">
@@ -35,23 +17,19 @@
                 <div class="form-group row">
                     <div class="col-sm-6">
                         <button type="submit" class="btn btn-primary circulo">
-                            <img src="icon_horario.png" class="imgcirculo">
+                            <img src="/img/icon_horario.png" class="imgcirculo">
                         </button>  
                         <h3 style="margin-bottom: 0%;">Consulta de horarios</h3>        
                     </div>
                     <div class="col-sm-6">
                         <button type="submit" class="btn btn-primary circulo">
-                            <img src="icon_matricula.png" class="imgcirculo">
+                            <img src="/img/icon_matricula.png" class="imgcirculo">
                         </button>         
                         <h3 style="margin-bottom: 0%;">Matrícula en línea</h3>        
                     </div>
                 </div>
+        	</div>
         </div>
-        </div>
-        <footer class="footer">
-            <div class="container-footer-all">
-                <img src="foot.png" style="position: absolute; width: 100%; height: 15%; bottom: 0;"></img>
-            </div>
-        </footer>    
+    	<div th:replace="fragments/footer :: footer"></div>
     </body>
 </html>
