Docentes, Cursos, Secciones
- Controller
- Model
- Repository
- Service
- ServiceImpl
con sus respectivos 2 html

--- a/src/main/resources/templates/inicio-admin.html
+++ b/src/main/resources/templates/inicio-admin.html
@@ -28,6 +28,7 @@
                         <h3 class="txtcirculos">Cursos</h3>        
                     </div>
                     <div class="col-sm-6 coladmin">
+                        <a th:href="@{/admin/docentes/}">
                         <button type="submit" class="btn btn-primary circuloadmin">
                             <img class="imgcirculoadmin" src="/img/docentes.png" >
                         </button>         
