--- a/src/main/resources/templates/inicio-docente.html
+++ b/src/main/resources/templates/inicio-docente.html
@@ -16,15 +16,19 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-6">
-                        <button type="submit" class="btn btn-primary circulo">
-                            <img src="/img/icon_horario.png" width="120px" style="margin-left:10%;">
-                        </button>  
+						<a th:href="@{/uDocente/horario/}">
+							<button type="submit" class="btn btn-primary circulo">
+								<img src="/img/icon_horario.png" width="120px" style="margin-left:10%;">
+							</button>  
+						</a>
                         <h3 style="margin-bottom: 0%;">Consulta de horarios</h3>        
                     </div>
                     <div class="col-sm-6">
-                        <button type="submit" class="btn btn-primary circulo">
-                            <img src="/img/icon_clases.png" width="125px" style="margin-left:8%;">
-                        </button>         
+						<a th:href="@{/uDocente/secciones/}">
+							<button type="submit" class="btn btn-primary circulo">
+								<img src="/img/icon_clases.png" width="125px" style="margin-left:8%;">
+							</button>  
+						</a>
                         <h3 style="margin-bottom: 0%;">Secciones actuales</h3>        
                     </div>
                 </div>
